--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -67,6 +67,6 @@
 
   - name: print the count
      ansible.builtin.debug:
-      msg: "product count: {{product_count}}"
+      msg: "product count: {{product_count}}""
 
   
