--- a/catalogue.yaml
+++ b/catalogue.yaml
@@ -65,8 +65,16 @@
     ansible.builtin.command:  mongo --host mongodb.awsdevops.space --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
     register: product_count
 
-  - name: print the count
-     ansible.builtin.debug:
-      msg: "product count: {{product_count}}""
+  # - name: print the count
+  #   ansible.builtin.debug:
+  #     msg: "product count: {{product_count}}"
 
-  
+  - name: load catalogue data
+    ansible.builtin.command: mongo --host mongodb.awsdevops.space < /app/schema/catalogue.js
+    when: product_count.stdout == "0" # keep double quotes
+
+  - name: start and enable catalogue
+    ansible.builtin.service:
+      name: catalogue
+      state: restarted
+      enabled: yes
