--- a/inventory.ini
+++ b/inventory.ini
@@ -2,3 +2,19 @@
 mongodb.awsdevops.space
 [catalogue]
 catalogue.awsdevops.space
+[user]
+user.awsdevops.space
+[cart]
+cart.awsdevops.space
+[web]
+web.awsdevops.space
+[redis]
+redis.awsdevops.space
+[mysql]
+mysql.awsdevops.space
+[shipping]
+shipping.awsdevops.space
+[rabbitmq]
+rabbitmq.awsdevops.space
+[payment]
+payment.awsdevops.space
