--- a/web.yaml
+++ b/web.yaml
@@ -33,8 +33,13 @@
       src: roboshop.conf
       dest: /etc/nginx/default.d/roboshop.conf
 
-  - name: start and enable nginx
-    ansible.builtin.service:
+  - name: enable nginx
+    ansible.builtin.command:
+      name: nginx
+      state: enabled
+
+  - name: start nginx
+    ansible.builtin.command:
       name: nginx
       state: restarted
-      enabled: yes
+  
