--- a/roboshop.conf
+++ b/roboshop.conf
@@ -5,10 +5,10 @@ location /images/ {
   try_files $uri /images/placeholder.jpg;
 }
 location /api/catalogue/ { proxy_pass http://catalogue.awsdevops.space:8080/; }
-location /api/user/ { proxy_pass http://user.awsdevops.space:8080/; }
-location /api/cart/ { proxy_pass http://cart.awsdevops.space:8080/; }
-location /api/shipping/ { proxy_pass http://shipping.awsdevops.space:8080/; }
-location /api/payment/ { proxy_pass http://payment.awsdevops.space:8080/; }
+location /api/user/ { proxy_pass http://localhost:8080/; }
+location /api/cart/ { proxy_pass http://localhost:8080/; }
+location /api/shipping/ { proxy_pass http://localhost:8080/; }
+location /api/payment/ { proxy_pass http://localhost:8080/; }
 
 location /health {
   stub_status on;
